--- a/src/components/ContactUsPage/index.scss
+++ b/src/components/ContactUsPage/index.scss
@@ -29,6 +29,10 @@
     @include phone() {
       flex-direction: column;
     }
+
+    @include tablet() {
+      flex-direction: column;
+    }
   }
 
   &__body {
@@ -36,6 +40,13 @@
     min-height: 400px;
 
     @include phone() {
+      min-height: inherit;
+    }
+
+    @include tablet() {
+      display: flex;
+      flex-direction: column;
+      max-width: 480px !important;
       min-height: inherit;
     }
   }
@@ -64,6 +75,15 @@
 
     @include phone() {
       margin: 20px 0 auto;
+      position: inherit !important;
+      padding: 30px 0 0 0;
+      border: none !important;
+      max-width: none;
+      width: 100%;
+    }
+
+    @include tablet() {
+      margin: 0 0 auto;
       position: inherit !important;
       padding: 30px 0 0 0;
       border: none !important;
