--- a/src/components/common/TextArea.scss
+++ b/src/components/common/TextArea.scss
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   position: relative;
   width: 100%;
-  height: 90px;
 
   select {
     background: url(../../assets/drop_down.svg) no-repeat 95% 50%;
